--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -24,5 +25,6 @@
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.0",
     "nodemon": "^3.0.3"
+    
   }
 }
